@@ -42,6 +42,43 @@ GTK_PREFIX=`$PKG_CONFIG --variable=prefix gtk+-2.0`
 AC_SUBST(GTK_BINARY_VERSION)
 AC_SUBST(GTK_PREFIX)
 
+dnl check for sysconfdir
+IM_HANGUL_GTK_IMMODULE_FILE="${sysconfdir}/gtk-2.0/gtk.immodules"
+ac_save_CFLAGS="$CFLAGS"
+ac_save_LIBS="$LIBS"
+CFLAGS="$CFLAGS $GTK_CFLAGS"
+LIBS="$GTK_LIBS $LIBS"
+rm -f conftest.msg
+AC_RUN_IFELSE([AC_LANG_SOURCE([[
+#include <stdio.h>
+#include <stdlib.h>
+#include <gtk/gtk.h>
+int main(void) {
+    gchar *str;
+	FILE *file;
+	unsetenv("GTK_IM_MODULE_FILE");
+	str = gtk_rc_get_im_module_file();
+	printf("checking for GTK_IM_MODULE_FILE... ");
+	file = fopen("conftest.msg", "w");
+	if (file) {
+		fprintf(file, "%s", str);
+		printf("%s\n", str);
+		fclose(file);
+		g_free(str);
+		return 0;
+	} else {
+		g_free(str);
+		printf("\n");
+		return 1;
+	}
+}]])],
+[IM_HANGUL_GTK_IMMODULE_FILE=`cat conftest.msg`]
+)
+rm -f conftest.msg
+CFLAGS="$ac_save_CFLAGS"
+LIBS="$ac_save_LIBS"
+AC_SUBST(IM_HANGUL_GTK_IMMODULE_FILE)
+
 dnl default keyboard
 AC_ARG_WITH(default-keyboard, [  --with-default-keyboard=2/39/3f   default hangul keyboard])
 case "$with_default_keyboard" in
